base/passport-status-api/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-status-api
  labels:
    app.kubernetes.io/name: passport-status-api
    app.kubernetes.io/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-status-api
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: passport-status-api
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: passport-status-api
          image: dtsrhpdevscedacr.azurecr.io/passport-status-api:latest
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 2
          lifecycle:
            preStop:
              exec:
                command: ['sleep', '30']
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          volumeMounts:
            - name: config
              mountPath: /workspace/BOOT-INF/classes/application-local.yaml
              subPath: application.yaml
      terminationGracePeriodSeconds: 100
      volumes:
        - name: config
          configMap:
            name: passport-status-api-cm
