base/passport-status-api/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: passport-status-api
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app.kubernetes.io/name: passport-status-api
    app.kubernetes.io/component: api
